--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@ button.submit {
 
 <!-- MODULAR FIREBASE SCRIPT -->
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getFirestore, collection, addDoc, deleteDoc, onSnapshot, doc, updateDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import { initializeApp } from "https://ecoactionibaba-default-rtdb.asia-southeast1.firebasedatabase.app/";
+import { getFirestore, collection, addDoc, deleteDoc, onSnapshot, doc, updateDoc } from "https://ecoactionibaba-default-rtdb.asia-southeast1.firebasedatabase.app/";
 
 /* FIREBASE CONFIG */
 const firebaseConfig = {
