--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ button.submit {
 
     <div id="updates">
         <div class="label">GENERAL UPDATES</div>
-        <div class="content">Latest updates about Agoncillo, Batangas will appear here. Example: Community clean-up schedule, announcements, or local news.</div>
+        <div class="content">Loading updates...</div>
     </div>
 
     <div id="form">
@@ -209,33 +209,35 @@ button.submit {
             <textarea id="availability" placeholder="Availability" required></textarea>
             <button class="submit">Add Volunteer</button>
         </form>
-        <p id="msg"></p>
     </div>
 </div>
 
 </div>
 
-<!-- LEAFLET SCRIPT -->
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-<!-- MODULAR FIREBASE SCRIPT -->
 <script type="module">
-import { initializeApp } from "firebase/app";
-import { getFirestore, collection, addDoc, deleteDoc, onSnapshot, doc, updateDoc } from "firebase/firestore";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { 
+  getFirestore, 
+  collection, 
+  addDoc, 
+  deleteDoc, 
+  onSnapshot, 
+  doc, 
+  setDoc 
+} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
 /* FIREBASE CONFIG */
 const firebaseConfig = {
   apiKey: "AIzaSyDOIEqttkf43bV61HLpbDDYt7yr92I13Zg",
   authDomain: "ecoactionibaba.firebaseapp.com",
-  databaseURL: "https://ecoactionibaba-default-rtdb.asia-southeast1.firebasedatabase.app",
   projectId: "ecoactionibaba",
   storageBucket: "ecoactionibaba.firebasestorage.app",
   messagingSenderId: "367012227040",
-  appId: "1:367012227040:web:3b7c517cba2b6ee4c0ad85",
-  measurementId: "G-QT371ZPP3B"
+  appId: "1:367012227040:web:3b7c517cba2b6ee4c0ad85"
 };
 
-/* INITIALIZE FIREBASE */
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 
@@ -255,77 +257,72 @@ L.polygon([[13.9375,120.9235],[13.9375,120.9275],[13.9345,120.9275],[13.9345,120
     color:'red', fillColor:'#f56565', fillOpacity:0.6
 }).addTo(map).bindPopup("Needs Cleaning");
 
-/* REAL-TIME SCHEDULE SYNC */
-notes.forEach((note, idx) => {
-    note.setAttribute("contenteditable", "true");
-    note.addEventListener("blur", async () => {
-        const noteRef = doc(db, "schedule", `note${idx}`);
-        await updateDoc(noteRef, { content: note.innerText }).catch(async () => {
-            await addDoc(collection(db, "schedule"), { id: `note${idx}`, content: note.innerText });
-        });
-    });
-});
-
-onSnapshot(collection(db, "schedule"), snapshot => {
-    snapshot.forEach(docSnap => {
-        const idx = parseInt(docSnap.id.replace("note",""));
-        if (notes[idx]) notes[idx].innerText = docSnap.data().content;
-    });
-});
-
-/* VOLUNTEER TABLE */
+/* VOLUNTEERS */
 onSnapshot(collection(db, "volunteers"), snapshot => {
-    table.innerHTML = `
-      <tr>
-        <th>Name</th>
-        <th>Contact</th>
-        <th>Availability</th>
-        <th>Action</th>
-      </tr>`;
-    snapshot.forEach(docSnap => addRow(docSnap));
+  table.innerHTML = `
+    <tr>
+      <th>Name</th>
+      <th>Contact</th>
+      <th>Availability</th>
+      <th>Action</th>
+    </tr>`;
+  snapshot.forEach(docSnap => addRow(docSnap));
 });
 
 form.addEventListener("submit", async e => {
-    e.preventDefault();
-    if (!inputName.value || !inputContact.value || !inputAvailability.value) return;
-    await addDoc(collection(db, "volunteers"), {
-        name: inputName.value,
-        contact: inputContact.value,
-        availability: inputAvailability.value
-    });
-    form.reset();
+  e.preventDefault();
+  await addDoc(collection(db, "volunteers"), {
+    name: inputName.value,
+    contact: inputContact.value,
+    availability: inputAvailability.value
+  });
+  form.reset();
 });
 
-function addRow(docSnap){
-    const v = docSnap.data();
-    const r = table.insertRow();
-    r.insertCell().innerText = v.name;
-    r.insertCell().innerText = v.contact;
-    r.insertCell().innerText = v.availability;
+function addRow(docSnap) {
+  const v = docSnap.data();
+  const r = table.insertRow();
+  r.insertCell().innerText = v.name;
+  r.insertCell().innerText = v.contact;
+  r.insertCell().innerText = v.availability;
 
-    const c = r.insertCell();
-    const b = document.createElement("button");
-    b.innerText = "Delete";
-    b.onclick = () => deleteDoc(doc(db, "volunteers", docSnap.id));
-    c.appendChild(b);
+  const c = r.insertCell();
+  const b = document.createElement("button");
+  b.innerText = "Delete";
+  b.onclick = () => deleteDoc(doc(db, "volunteers", docSnap.id));
+  c.appendChild(b);
 }
 
-/* GENERAL UPDATES ABOUT AGONCILLO - editable */
-updatesContent.setAttribute("contenteditable", "true");
-updatesContent.addEventListener("blur", async () => {
-    const updatesRef = doc(db, "generalUpdates", "agoncillo");
-    await updateDoc(updatesRef, { content: updatesContent.innerText }).catch(async () => {
-        await addDoc(collection(db, "generalUpdates"), { id: "agoncillo", content: updatesContent.innerText });
+/* SCHEDULE */
+notes.forEach((note, idx) => {
+  note.setAttribute("contenteditable", "true");
+  note.addEventListener("blur", async () => {
+    await setDoc(doc(db, "schedule", `note${idx}`), {
+      content: note.innerText
     });
+  });
 });
 
-// Load updates from Firestore
-onSnapshot(collection(db, "generalUpdates"), snapshot => {
-    snapshot.forEach(docSnap => {
-        if(docSnap.id === "agoncillo") {
-            updatesContent.innerText = docSnap.data().content;
-        }
-    });
+onSnapshot(collection(db, "schedule"), snapshot => {
+  snapshot.forEach(docSnap => {
+    const idx = parseInt(docSnap.id.replace("note",""));
+    if(notes[idx]) notes[idx].innerText = docSnap.data().content;
+  });
+});
+
+/* GENERAL UPDATES */
+updatesContent.setAttribute("contenteditable","true");
+
+updatesContent.addEventListener("blur", async () => {
+  await setDoc(doc(db, "generalUpdates", "agoncillo"), {
+    content: updatesContent.innerText
+  });
+});
+
+onSnapshot(doc(db, "generalUpdates", "agoncillo"), docSnap => {
+  if(docSnap.exists()){
+    updatesContent.innerText = docSnap.data().content;
+  }
 });
 </script>
 
