--- a/index.html
+++ b/index.html
@@ -71,13 +71,12 @@ header {
 .green { background: #7fcf8a; }
 .blue { background: #9ed0f6; }
 
-/* Editable notes */
 .note[contenteditable="true"] {
     border: 2px dashed #c0392b;
     cursor: text;
 }
 
-/* VOLUNTEER TABLE */
+/* TABLE */
 table {
     width: 100%;
     border-collapse: collapse;
@@ -107,26 +106,18 @@ td button {
     cursor: pointer;
 }
 
-td button:hover {
-    background: #922b21;
-}
-
-/* RIGHT PANEL */
 #rightPanel {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-/* MAP */
 #map {
     height: 250px;
     border-radius: 12px;
     border: 4px solid #6fa76f;
-    box-shadow: 0 5px 0 #4c7c4c;
 }
 
-/* UPDATES */
 #updates {
     display: flex;
     gap: 10px;
@@ -147,13 +138,10 @@ td button:hover {
     border: 2px solid #d9c9a3;
 }
 
-/* Editable updates */
 #updates .content[contenteditable="true"] {
     border: 2px dashed #c0392b;
-    cursor: text;
 }
 
-/* FORM */
 #form {
     background: #fffdf4;
     padding: 15px;
@@ -177,7 +165,6 @@ button.submit {
 
 <div id="dashboard">
 
-<!-- SCHEDULE -->
 <div id="planning">
     <div class="quarter"><h3>JAN–MAR</h3><div class="note yellow"></div><div class="note blue"></div><div class="note green"></div></div>
     <div class="quarter"><h3>APR–JUNE</h3><div class="note green"></div><div class="note yellow"></div><div class="note blue"></div></div>
@@ -185,20 +172,18 @@ button.submit {
     <div class="quarter"><h3>OCT–DEC</h3><div class="note green"></div><div class="note yellow"></div><div class="note blue"></div></div>
 </div>
 
-<!-- VOLUNTEER TABLE BELOW SCHEDULE -->
 <div style="grid-column:1 / span 2;">
 <table id="volunteerTable">
 <tr><th>Name</th><th>Contact</th><th>Availability</th><th>Action</th></tr>
 </table>
 </div>
 
-<!-- RIGHT PANEL -->
 <div id="rightPanel">
     <div id="map"></div>
 
     <div id="updates">
         <div class="label">GENERAL UPDATES</div>
-        <div class="content">Loading updates...</div>
+        <div class="content">Loading...</div>
     </div>
 
     <div id="form">
@@ -225,10 +210,10 @@ import {
   deleteDoc, 
   onSnapshot, 
   doc, 
-  setDoc 
+  setDoc,
+  enableIndexedDbPersistence
 } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-/* FIREBASE CONFIG */
 const firebaseConfig = {
   apiKey: "AIzaSyDOIEqttkf43bV61HLpbDDYt7yr92I13Zg",
   authDomain: "ecoactionibaba.firebaseapp.com",
@@ -241,40 +226,33 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 
-/* ELEMENT REFERENCES */
+/* 🔥 OFFLINE + RELOAD PERSISTENCE FIX */
+enableIndexedDbPersistence(db).catch(e => console.warn(e.code));
+
 const table = document.getElementById("volunteerTable");
 const form = document.getElementById("signupForm");
-const inputName = document.getElementById("name");
-const inputContact = document.getElementById("contact");
-const inputAvailability = document.getElementById("availability");
 const notes = document.querySelectorAll(".note");
 const updatesContent = document.querySelector("#updates .content");
 
 /* MAP */
 const map = L.map('map').setView([13.9360, 120.9250], 15);
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
-L.polygon([[13.9375,120.9235],[13.9375,120.9275],[13.9345,120.9275],[13.9345,120.9235]],{
-    color:'red', fillColor:'#f56565', fillOpacity:0.6
-}).addTo(map).bindPopup("Needs Cleaning");
 
 /* VOLUNTEERS */
 onSnapshot(collection(db, "volunteers"), snapshot => {
   table.innerHTML = `
-    <tr>
-      <th>Name</th>
-      <th>Contact</th>
-      <th>Availability</th>
-      <th>Action</th>
-    </tr>`;
-  snapshot.forEach(docSnap => addRow(docSnap));
+    <tr><th>Name</th><th>Contact</th><th>Availability</th><th>Action</th></tr>`;
+
+  snapshot.forEach(d => addRow(d));
 });
 
 form.addEventListener("submit", async e => {
   e.preventDefault();
   await addDoc(collection(db, "volunteers"), {
-    name: inputName.value,
-    contact: inputContact.value,
-    availability: inputAvailability.value
+    name: name.value,
+    contact: contact.value,
+    availability: availability.value,
+    created: Date.now()
   });
   form.reset();
 });
@@ -295,34 +273,28 @@ function addRow(docSnap) {
 
 /* SCHEDULE */
 notes.forEach((note, idx) => {
-  note.setAttribute("contenteditable", "true");
+  note.setAttribute("contenteditable","true");
   note.addEventListener("blur", async () => {
-    await setDoc(doc(db, "schedule", `note${idx}`), {
-      content: note.innerText
-    });
+    await setDoc(doc(db,"schedule",`note${idx}`),{ content: note.innerText });
   });
 });
 
-onSnapshot(collection(db, "schedule"), snapshot => {
-  snapshot.forEach(docSnap => {
-    const idx = parseInt(docSnap.id.replace("note",""));
-    if(notes[idx]) notes[idx].innerText = docSnap.data().content;
+onSnapshot(collection(db,"schedule"), snap => {
+  snap.forEach(d => {
+    const i = parseInt(d.id.replace("note",""));
+    if(notes[i]) notes[i].innerText = d.data().content;
   });
 });
 
-/* GENERAL UPDATES */
+/* UPDATES */
 updatesContent.setAttribute("contenteditable","true");
 
 updatesContent.addEventListener("blur", async () => {
-  await setDoc(doc(db, "generalUpdates", "agoncillo"), {
-    content: updatesContent.innerText
-  });
+  await setDoc(doc(db,"generalUpdates","agoncillo"),{ content: updatesContent.innerText });
 });
 
-onSnapshot(doc(db, "generalUpdates", "agoncillo"), docSnap => {
-  if(docSnap.exists()){
-    updatesContent.innerText = docSnap.data().content;
-  }
+onSnapshot(doc(db,"generalUpdates","agoncillo"), d => {
+  if(d.exists()) updatesContent.innerText = d.data().content;
 });
 </script>
 
