--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ header {
 <script type="text/javascript" src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
 <script type="text/javascript">
    (function(){
-      emailjs.init("YOUR_EMAILJS_USER_ID"); // Replace with your EmailJS User ID
+      emailjs.init("J5C31ikXLLyhyLsdT"); // Your User ID
    })();
 </script>
 
@@ -229,17 +229,19 @@ header {
 const map = L.map('map').setView([13.9462608,120.94088389], 15);
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
-L.polygon([[13.94965871,120.9408106],[13.94969433,120.94081056],[13.94973678,120.94102123],[13.9497206,120.94101883]],
-{ color:'red', fillColor:'#f56565', fillOpacity:0.6 }).addTo(map).bindPopup("Needs Cleaning");
+/* ===== POLYGONS ===== */
+const polygons = [
+    [[13.94965871,120.9408106],[13.94969433,120.94081056],[13.94973678,120.94102123],[13.9497206,120.94101883]],
+    [[13.95019297,120.93941406],[13.95023971,120.93943898],[13.95015354,120.93954712],[13.950148107,120.93954624]],
+    [[13.9501333,120.93956394],[13.95015034,120.93955586],[13.95008737,120.9400602],[13.95007683,120.94006699]],
+    [[13.94760165,120.94475761],[13.94760053,120.94474366],[13.94826218,120.94444513],[13.94827686,120.94449015]]
+];
 
-L.polygon([[13.95019297,120.93941406],[13.95023971,120.93943898],[13.95015354,120.93954712],[13.950148107,120.93954624]],
-{ color:'red', fillColor:'#f56565', fillOpacity:0.6 }).addTo(map).bindPopup("Needs Cleaning");
-
-L.polygon([[13.9501333,120.93956394],[13.95015034,120.93955586],[13.95008737,120.9400602],[13.95007683,120.94006699]],
-{ color:'red', fillColor:'#f56565', fillOpacity:0.6 }).addTo(map).bindPopup("Needs Cleaning");
-
-L.polygon([[13.94760165,120.94475761],[13.94760053,120.94474366],[13.94826218,120.94444513],[13.94827686,120.94449015]],
-{ color:'red', fillColor:'#f56565', fillOpacity:0.6 }).addTo(map).bindPopup("Needs Cleaning");
+polygons.forEach(coords => {
+    L.polygon(coords, { color:'red', fillColor:'#f56565', fillOpacity:0.6 })
+     .addTo(map)
+     .bindPopup("Needs Cleaning");
+});
 
 /* ===== MODAL LOGIC ===== */
 let chosenSchedule = "";
@@ -276,7 +278,6 @@ function submitForm() {
         return;
     }
 
-    // Format the message for professional email
     const message = `
 Hello ${userName},
 
@@ -293,7 +294,6 @@ Best regards,
 Subic Ibaba Eco-Action Team
 `;
 
-    // EmailJS template parameters
     const templateParams = {
         to_name: userName,
         to_email: userEmail,
@@ -306,7 +306,7 @@ Subic Ibaba Eco-Action Team
             alert("Thank you for signing up! A confirmation email has been sent to " + userEmail);
             closeForm();
         }, function(error) {
-            console.log('FAILED...', error);
+            console.error('FAILED...', error);
             alert("Sign-up successful, but confirmation email could not be sent.");
             closeForm();
         });
